# slimeball

./: .gitignore  Cargo.toml  README.md
slimeball-gui/: Cargo.toml
slimeball-gui/src/: main.rs  proto.rs  viewer.rs
slimeball-lib/: Cargo.toml  SPEC.md
slimeball-lib/src/: lib.rs
