[package]
name = "slimeball-lib"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["minecraft", "slime"]
categories = ["game-development"]
description = "A Rust crate for loading and saving Slime worlds"
repository = "https://github.com/xoogware/slimeball"

[dependencies]
byteorder = "1.5.0"
fastnbt = { git = "https://github.com/owengage/fastnbt" }
serde = "1.0.219"
thiserror = "2.0.12"
tracing = "0.1.41"
zstd = "0.13.3"
